--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SX10ZC3JSG"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KD5PRKWNR2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        gtag('config', 'G-SX10ZC3JSG');
-    </script>
+  gtag('config', 'G-KD5PRKWNR2');
+</script>
+
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "s3xg87xygo");
+</script>
+    
     <!-- 设置文档字符编码为UTF-8，确保正确显示各种语言字符 -->
     <meta charset="UTF-8">
     <!-- 设置视口，使网站在移动设备上正确缩放 -->
@@ -22,7 +31,7 @@
     <meta name="description"
         content="Embark on an epic adventure in Elvenrage! Play thrilling fantasy elf games, explore magical realms, and join a vibrant community of players online for free.">
     <!-- 规范链接，告诉搜索引擎这是网站的主要URL -->
-    <link rel="canonical" href="https://qdxinyiyuan.com">
+    <link rel="canonical" href="https://batzhy.com">
 
     <!-- 网站图标设置 -->
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -449,8 +458,6 @@
         <div class="footer-content">
             <!-- 版权信息和联系方式 -->
             <div class="copyright">
-                <!-- ICP备案号链接 -->
-                <p><a href="https://beian.miit.gov.cn" rel="nofollow">渝ICP备2025051720号-65</a></p>
                 <!-- 联系邮箱 -->
                 <p>Contact Us: ytsgabcde005@2925.com</p>
             </div>
